--- a/styles/main.scss
+++ b/styles/main.scss
@@ -45,14 +45,14 @@ input , select {
 	box-shadow: inset 0 0 0 4px rgba(0, 0, 0, 0.1),inset 0 0 0 4px rgba(255, 255, 255, 0.2),0 0 0 1px rgba(204, 204, 204, 0.4);
 }
 .bzs-p {
-	padding:50px 0;
+	padding:50px 10px;
 	margin:40px 20px;
 }
 
 #tools {
 	position: absolute;
 	left: 10px;
-	top:10px; 
+	top:10px;
 	overflow: hidden;
 	pointer-events:none;
 	width:800px;
